# ArzteZ-PPF-solver

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES_AND_FAQ.md  README.md
ando_core_src/: .gitignore  release.sh
ando_core_src/demos/: README.md  README_python.md  demo_barrier.py  demo_cascading_curtains.py  test_keys.py  view_sequence.py
ando_core_src/tests/: test_adaptive_timestep.py  test_barrier_derivatives.cpp
blender_addon/: INSTALL_AND_QUICKSTART.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  __init__.py  blender_manifest.toml  object_properties.py  operators.py  ppf_export.py  properties.py  ui.py  ui_unified.py
blender_addon/ando/: ppf_adapter.py  ui.py
legacy/artezbuild_0.0.06/: KNOWN_ISSUES_AND_FAQ.md  build.sh
legacy/artezbuild_0.0.06/ando_core_src/: CMakeLists.txt
legacy/artezbuild_0.0.06/ando_core_src/demos/: demo_elasticity.py  demo_simple_fall.cpp  demo_stress_test.py  demo_tablecloth_pull.py
legacy/artezbuild_0.0.06/ando_core_src/src/core/: collision.h  elasticity.cpp  integrator.cpp  line_search.h  matrix_assembly.cpp  mesh.cpp  pcg_solver.h  rigid_body.cpp  state.cpp  strain_limiting.cpp  strain_limiting.h
legacy/artezbuild_0.0.06/ando_core_src/tests/: test_collision_validator.cpp  test_e2e.py  test_heatmap_colors.py
legacy/artezbuild_0.0.07/: KNOWN_ISSUES_AND_FAQ.md
legacy/artezbuild_0.0.07/ando_core_src/demos/: CMakeLists.txt  demo_flag_wave.py  test_demos.py
legacy/artezbuild_0.0.08/: README.md  build.sh
legacy/artezbuild_0.0.08/ando_core_src/tests/: CMakeLists.txt  test_hybrid.cpp
legacy/v0.0.8/ppf-contact-solver/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  warmup.py
legacy/v0.0.8/ppf-contact-solver/.github/workflows/: belt-win.yml  belt.yml  cards-win.yml  cards.yml  codim-win.yml  codim.yml  curtain-win.yml  curtain.yml  domino-win.yml  domino.yml  drape-win.yml  drape.yml  fishingknot-win.yml  fishingknot.yml  fitting-win.yml  fitting.yml  five-twist-win.yml  five-twist.yml  friction-win.yml  friction.yml  getting-started.yml  hang-win.yml  hang.yml  make-docs.yml  needle-win.yml  needle.yml  noodle-win.yml  noodle.yml  release-win.yml  ribbon-win.yml  ribbon.yml  roller-win.yml  roller.yml  run-all-once-win.yml  run-all-once.yml  run-example-win.yml  stack-win.yml  stack.yml  trampoline-win.yml  trampoline.yml  (+8 more)
legacy/v0.0.8/ppf-contact-solver/.github/workflows/scripts/: cancel-all.sh  example-gen-win.py  example-gen.py  example-list.py  examples.txt  run-all-once-gen-win.py  run-all-once-gen.py  run-all-win.py  run-all.py
legacy/v0.0.8/ppf-contact-solver/.github/workflows/scripts/win/: convert-notebook.ps1  install-cuda.ps1  install-nvidia-driver.ps1  run-example.ps1  run-iteration.ps1  user-data.ps1
legacy/v0.0.8/ppf-contact-solver/.github/workflows/template/: aws-template-win.yml  aws-template.yml
legacy/v0.0.8/ppf-contact-solver/articles/: install.md
legacy/v0.0.8/ppf-contact-solver/blender_addon/: blender_manifest.toml
legacy/v0.0.8/ppf-contact-solver/docs/: build.sh
legacy/v0.0.8/ppf-contact-solver/eigsys/: Makefile  bench3.cpp  eigsys_2.cpp  eigsys_2.py  eigsys_3.cpp  eigsys_3.py  eigsys_invariants_2.py  eigsys_invariants_3.py
legacy/v0.0.8/ppf-contact-solver/eigsys/eig-hpp/: eigsolve2x2.hpp  eigsolve3x3.hpp
legacy/v0.0.8/ppf-contact-solver/eigsys/eig-rust/src/: eigsolve2x2.rs  eigsolve3x3.rs  eigsys_2.rs  eigsys_3.rs  main.rs
legacy/v0.0.8/ppf-contact-solver/eigsys/eig_py/: eigsolve2x2.py  eigsolve3x3.py
legacy/v0.0.8/ppf-contact-solver/examples/: belt.ipynb  cards.ipynb  codim.ipynb  curtain.ipynb  domino.ipynb  drape.ipynb  fishingknot.ipynb  fitting.ipynb  five-twist.ipynb  friction.ipynb  hang.ipynb  headless.py  large-five-twist.ipynb  large-twist.ipynb  large-woven.ipynb  needle.ipynb  noodle.ipynb  ribbon.ipynb  roller.ipynb  stack.ipynb  trampoline.ipynb  trapped.ipynb  twist.ipynb  walkthrough.ipynb  woven.ipynb  yarn.ipynb
legacy/v0.0.8/ppf-contact-solver/frontend/: __init__.py  _app_.py  _asset_.py  _decoder_.py  _extra_.py  _mesh_.py  _param_.py  _parse_.py  _plot_.py  _render_.py  _scene_.py  _session_.py  _utils_.py
legacy/v0.0.8/ppf-contact-solver/src/: args.rs  backend.rs  builder.rs  bvh.rs  cvec.rs  cvecvec.rs  data.rs  inprocess.rs  lib.rs  main.rs  mesh.rs  scene.rs  triutils.rs
legacy/v0.0.8/ppf-contact-solver/src/cpp/: Makefile  common.hpp  data.hpp  stub.cpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/barrier/: barrier.cu  barrier.hpp  cubic.hpp  logarithm.hpp  quadratic.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/buffer/: buffer.cu  buffer.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/contact/: aabb.hpp  accd.hpp  contact.cu  contact.hpp  distance.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/csrmat/: csrmat.cu  csrmat.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/eigenanalysis/: eigenanalysis.cu  eigenanalysis.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/energy/: energy.cu  energy.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/energy/model/: air_damper.hpp  arap.hpp  baraffwitkin.hpp  detsqr.hpp  dihedral_angle.hpp  fix.hpp  friction.hpp  hook.hpp  momentum.hpp  push.hpp  snhk.hpp  stvk.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/kernels/: exclusive_scan.cu  exclusive_scan.hpp  reduce.cu  reduce.hpp  vec_ops.cu  vec_ops.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/kernels/tests/: Makefile
legacy/v0.0.8/ppf-contact-solver/src/cpp/main/: cuda_utils.hpp  main.cu  mem.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/simplelog/: SimpleLog.cpp  SimpleLog.h
legacy/v0.0.8/ppf-contact-solver/src/cpp/solver/: solver.cu  solver.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/strainlimiting/: strainlimiting.cu  strainlimiting.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/utility/: cuda_utils.hpp  dispatcher.cu  dispatcher.hpp  utility.cu  utility.hpp
legacy/v0.0.8/ppf-contact-solver/src/cpp/vec/: vec.hpp
legacy/v0.0.8/ppf_cts_backend/: Cargo.toml  pyproject.toml
legacy/v0.0.8/ppf_cts_backend/python/ppf_cts_backend/: __init__.py
ppf_cts_backend/: Cargo.toml
tools/: build_ppf_wheel.sh  headless_install_and_test.py  headless_max_load_test.py
(+81 files in other folders)
