# File: Cargo.toml
# Code: Claude Code and Codex
# Review: Ryoichi Ando (ryoichi.ando@zozo.com)
# License: Apache v2.0

[package]
name = "ppf-contact-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.142"
serde = "1.0"
bincode = "1.3.3"
flate2 = "1.0.25"
log4rs = "1.2.0"
serde_json = "1.0.95"
log = "0.4"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
more-asserts = "0.2.2"
clap = { version = "3.1.12", features = ["derive"] }
bytemuck = "1.13.1"
rand = "0.8.5"
git_info = "^0.1.2"
rayon = "1.5.3"
toml = "0.8.19"
chrono = "0.4"
num-traits = "0.2.19"

[build-dependencies]
num_cpus = "1.16.0"
