[package]
name = "ppf_cts_backend"
version = "0.0.5"
edition = "2021"

[lib]
name = "ppf_cts_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

# Reuse the upstream solver core (scene loading, builder, stepping) in-process.
ppf-contact-solver = { path = "../ppf-contact-solver" }

# We keep the initial API minimal and avoid numpy dependency for the stub.
# Later we can add `numpy` crate for zero-copy arrays.
